<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.beepsterr</groupId>
        <artifactId>BetterKeepInventory</artifactId>
        <version>2.0.0</version>
    </parent>

    <groupId>com.github.beepsterr</groupId>
    <artifactId>betterkeepinventory-api</artifactId>
    <packaging>jar</packaging>
    <name>BetterKeepInventory API</name>

    <dependencies>
        <!-- Bukkit API for annotations / types like Material -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/BeepSterr/BetterKeepInventory</url>
        </repository>
    </distributionManagement>

</project>
